src/components/Pokedex/Pokemon/PokemonCard.scss
@import './src/scss/variables.scss';
.pokemonCard{
  font-size: 1em;

  background: white;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
  border-radius: 0.25em;

  margin: 1em 0;

  display: flex;
  flex-direction: column;


  &.noMargin{
    margin: 0;
  }

  @include media-xs{
    flex: 0 0 100%;
  }

  @include media-sm{
    flex: 0 0 calc(47%);
  }
  @include media-lg{
    flex: 0 0 calc(30%);
  }
  @include media-xl{
    flex: 0 0 calc(23%);
  }
  @include media-xxl{
    flex: 0 0 calc(18%);
  }

  .info{
    padding: 2em;
    flex: 1 0 0;
    display: flex;
    align-items: center;

    img{
      height: 48px;
      width: 48px;
    }

    .name{
      font-weight: 700;
      font-size: 1.25em;
    }
    a.name{
      color: black;
      text-decoration: none;
      transition: 0.15s all ease;
      &:hover{
        color: var(--color-primary);
      }
    }
    .id{
      font-weight: 300;
      color: var(--color-secondary-text);
    }
  }

  .types{
    background: var(--color-dark-background);
    color: white;
    padding: 1em 0;
    .col{
      min-height: 20px;
    }

    p{
      margin: 0;
      text-align: center;
    }
  }
}

